--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,6 +35,20 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        
+    - name: Git Version
+      # You may pin to the exact commit or the version.
+      # uses: codacy/git-version@fa06788276d7492a2af01662649696d249ecf4cb
+      uses: codacy/git-version@2.4.0
+      with:
+        # The name of the release branch
+        release-branch: main# default is master
+        # The name of the dev branch
+        dev-branch: develop # default is dev
+        # The prefix to use in the version
+        prefix: release# optional
+        # The paths to be used to calculate changes (comma-separated)
+        log-paths: logs/ # optional, default is ./
     - name: Test with pytest
       run: |
         pytest
