--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,11 +42,11 @@ jobs:
       uses: codacy/git-version@2.4.0
       with:
         # The name of the release branch
-        release-branch: main# default is master
+        release-branch: main
         # The name of the dev branch
         dev-branch: develop # default is dev
         # The prefix to use in the version
-        prefix: release# optional
+        prefix: release # optional
         # The paths to be used to calculate changes (comma-separated)
         log-paths: logs/ # optional, default is ./
     - name: Test with pytest
